helm_deploy/monitoring/datahub-networkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scraping
  namespace: ${KUBE_NAMESPACE}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: datahub
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              component: monitoring
